<?xml version="1.0"?>
<package format="2">
  <name>marsyard</name>
  <version>0.0.0</version>
  <description>The marsyard package</description>

  <maintainer email="blazej@todo.todo">blazej</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
